--- a/infrastructure/cloudbuild.yaml
+++ b/infrastructure/cloudbuild.yaml
@@ -1,4 +1,8 @@
 steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}', '.']
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}']
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['init', 
     '-backend-config=project=${PROJECT_ID}',
