--- a/infrastructure/cloudbuild.yaml
+++ b/infrastructure/cloudbuild.yaml
@@ -3,6 +3,8 @@ steps:
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['container', 'clusters', 'get-credentials', '${_APP_NAME}', '--project', '$PROJECT_ID']
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['init', 
     '-backend-config=project=${PROJECT_ID}',
