--- a/infrastructure/cloudbuild.yaml
+++ b/infrastructure/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['container', 'clusters', 'get-credentials', '${_APP_NAME}', '--project', '$PROJECT_ID']
+  args: ['container', 'clusters', 'get-credentials', '${_APP_NAME}', "--zone", "${_ZONE}", '--project', '$PROJECT_ID']
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['init', 
     '-backend-config=project=${PROJECT_ID}',
@@ -17,6 +17,8 @@ steps:
     - "TF_VAR_project_id=${PROJECT_ID}"
     - "TF_VAR_state_bucket=${_BUCKET}"
     - "TF_VAR_app_name=${_APP_NAME}"
+    - "TF_VAR_commit_sha=${SHORT_SHA}"
+    - "TF_VAR_image=gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}"
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['plan',
     '-var-file=infrastructure/terraform/env.tfvars',
@@ -26,6 +28,8 @@ steps:
     - "TF_VAR_project_id=${PROJECT_ID}"
     - "TF_VAR_state_bucket=${_BUCKET}"
     - "TF_VAR_app_name=${_APP_NAME}"
+    - "TF_VAR_commit_sha=${SHORT_SHA}"
+    - "TF_VAR_image=gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}"
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['apply',
     '-auto-approve',
@@ -36,3 +40,5 @@ steps:
     - "TF_VAR_project_id=${PROJECT_ID}"
     - "TF_VAR_state_bucket=${_BUCKET}"
     - "TF_VAR_app_name=${_APP_NAME}"
+    - "TF_VAR_commit_sha=${SHORT_SHA}"
+    - "TF_VAR_image=gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}"
