--- a/infrastructure/cloudbuild.yaml
+++ b/infrastructure/cloudbuild.yaml
@@ -58,3 +58,8 @@ steps:
     - "TF_VAR_app_name=${_APP_NAME}"
     - "TF_VAR_commit_sha=${SHORT_SHA}"
     - "TF_VAR_image=gcr.io/$PROJECT_ID/${_APP_NAME}:${SHORT_SHA}"
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: ['apply',
+    '-f',
+    'infrastructure/kubernetes'
+  ]
