--- a/infrastructure/kubernetes/ingress.yaml
+++ b/infrastructure/kubernetes/ingress.yaml
@@ -5,10 +5,6 @@ metadata:
   annotations:
     ingress.gcp.kubernetes.io/pre-shared-cert: "journaltown-api"
 spec:
-  rules:
-  - host: 'api.journaltown.com'
-    http:
-      paths:
-      - backend:
-          serviceName: api-service
-          servicePort: api-port
+  backend:
+    serviceName: api-service
+    servicePort: api-port
