--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2 = "*"
 django-webpack-loader = "*"
 djangorestframework = "*"
 gunicorn = "*"
+django-allow-cidr = "*"
 
 [requires]
 python_version = "3.7"
