--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-webpack-loader = "*"
 djangorestframework = "*"
 gunicorn = "*"
 django-allow-cidr = "*"
+django-anymail = {extras = ["mailgun"],version = "*"}
 
 [requires]
 python_version = "3.7"
