--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       DB_PASS: password
       DJANGO_SETTINGS_MODULE: posts.settings.local
       DJANGO_SECRET_KEY: secret
+      PASSWORDLESS_EMAIL_NOREPLY_ADDRESS: noreply@example.com
     command: scripts/docker-start
     ports:
     - "8000:8000"
