--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-allow-cidr = "*"
 django-anymail = {extras = ["mailgun"],version = "*"}
 drfpasswordless = "*"
 django-cors-headers = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
