--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,18 @@ ignore_missing_imports = True
 
 [mypy-rest_framework.*]
 ignore_missing_imports = True
+
+[mypy-django_registration.*]
+ignore_missing_imports = True
+
+[mypy-drf_writable_nested.*]
+ignore_missing_imports = True
+
+[mypy-expander.*]
+ignore_missing_imports = True
+
+[mypy-validate_email.*]
+ignore_missing_imports = True
+
+[mypy-django_filters.*]
+ignore_missing_imports = True
