Fix following. Add coverage. Make group editing work

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ validate-email = "*"
 django-registration = "*"
 djangorestframework-expander = "*"
 drf-writable-nested = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
